cinnamon.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinnamon-service
spec:
  type: ClusterIP
  selector:
    app: cinnamon
  ports:
    - port: 5678 # Default port for image
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinnamon-deployment
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: cinnamon
  template:
    metadata:
      name: cinnamon-app
      labels:
        app: cinnamon
    spec:
      containers:
        - name: cinnamon-app
          image: hashicorp/http-echo
          args:
          - "-text=cinnamon-app"
