ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /butterscotch
          pathType: Prefix
          backend:
            service:
              name: butterscotch-service
              port:
                number: 5678
        - path: /cinnamon
          pathType: Prefix
          backend:
            service:
              name: cinnamon-service
              port:
                number: 5678
